Fix code type size (and overlapping line heights)
Unconstrain main max width so inner can expand + tiny bit more
breathing room (should be a bit better for landscape tablets)

--- a/style.css
+++ b/style.css
@@ -76,9 +76,9 @@ a:hover {
 
 .main {
   position: relative;
-  max-width: 900px;
   margin: 0 auto;
   min-height: 100vh;
+  min-width: 600px;
 }
 
 a code {
@@ -111,7 +111,7 @@ code.language-javascript {
 }
 
 code {
-  font-size: 1.2em;
+  font-size: 1em;
   line-height: 1em;
   background: rgba(255,255,255,0.5);
   padding-top: 2px;
@@ -158,10 +158,12 @@ hr {
 
 h1, h2, h3 {
   font-weight: 300;
+  line-height: 1em;
 }
 
 h2 {
   margin-top: 30px;
+  line-height: 1.5em;
 }
 
 ul li {
@@ -269,7 +271,7 @@ ul li {
 }
 
 .inner {
-  max-width: 700px;
+  max-width: 750px;
 }
 
 section>section h1 {
